Updated server/client test.

--- a/test.html
+++ b/test.html
@@ -1,8 +1,42 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<script
-			type="application/javascript"
-			src="./glucose.deploy.js">
-		</script>
+		<title>glucose unit test</title>
+
+		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
+
+		<script type="application/javascript" src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
+
+		<script type="application/javascript" src="./glucose.deploy.js"></script>
 	</head>
+
+	<body>
+		<div id="qunit"></div>
+
+		<div id="qunit-fixture"></div>
+
+		<script type="application/javascript">
+			QUnit.test( "glucose unit test", function( assert ) {
+
+				assert.equal( JSON.stringify( glucose( { "hello": "world" } ) ),
+				JSON.stringify( {
+					"factor": [ ],
+					"identity": { },
+					"setting": { },
+					"query": { },
+					"pagination": { },
+					"data": { },
+					"list": [ ],
+					"element": { },
+					"array": { },
+					"scope": [ ],
+					"permission": [ ],
+					"hello": "world"
+				} ) );
+
+				assert.equal( typeof glucose( { "hello": "world" } ), "object", "should return 'object'" );
+				
+			} );
+		</script>
+	</body>
 </html>
