Updated server/client test.

--- a/test.html
+++ b/test.html
@@ -34,8 +34,8 @@
 					"hello": "world"
 				} ) );
 
-				assert.equal( typeof glucose( { "hello": "world" } ), "object", "should return 'object'" );
-				
+				assert.equal( typeof glucose( { "hello": "world" } ) == "object", true, "should return true" );
+
 			} );
 		</script>
 	</body>
