--- a/test.html
+++ b/test.html
@@ -19,22 +19,23 @@
 			QUnit.test( "glucose unit test", function( assert ) {
 
 				assert.equal( JSON.stringify( glucose( { "hello": "world" } ) ),
-				JSON.stringify( {
-					"factor": [ ],
-					"identity": { },
-					"setting": { },
-					"query": { },
-					"pagination": { },
-					"data": { },
-					"list": [ ],
-					"element": { },
-					"array": { },
-					"scope": [ ],
-					"permission": [ ],
-					"hello": "world"
-				} ) );
+					JSON.stringify( {
+						"factor": [ ],
+						"identity": { },
+						"setting": { },
+						"query": { },
+						"pagination": { },
+						"data": { },
+						"list": [ ],
+						"element": { },
+						"array": { },
+						"scope": [ ],
+						"permission": [ ],
+						"hello": "world"
+					} ),
+					"{'factor':[],'identity':{},'setting':{},'query':{},'pagination':{},'data':{},'list':[],'element':{},'array':{},'scope':[],'permission':[],'hello':'world'}" );
 
-				assert.equal( typeof glucose( { "hello": "world" } ) == "object", true, "should return true" );
+				assert.equal( typeof glucose( { "hello": "world" } ) == "object", true, "should be of object data type" );
 
 			} );
 		</script>
